Added method validateIsModerator and class Validate Small fixes and code refactoring

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 DISCORD_ID='APP ID'
 DISCORD_SECRET='APP SECRET'
-FIREBASE_ADMIN_SDK_KEY='PATH TO ADMIN SDK KEY Example: C:\admin.json'
+FIREBASE_ADMIN_SDK_KEY='PATH TO ADMIN SDK KEY Example: C:\admin.json (without quotes)'
 FULL_HOST=http://localhost:8080
-HOST=localhost
 PORT=8080
-FRONTEND_CALLBACK_URL=http://localhost/test/success.html
+FRONTEND_CALLBACK_URL=http://localhost/callback.html
