--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,1 @@
-# These are supported funding model platforms
-
-custom: https://nowpayments.io/donation/u032ch
+custom: ["https://nowpayments.io/donation/u032ch", "https://qiwi.com/n/HEADCRABJ"]
