--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DISCORD_ID='APP ID'
 DISCORD_SECRET='APP SECRET'
-FIREBASE_ADMIN_SDK_KEY='PATH TO ADMIN SDK KEY Example: C:\admin.json (without quotes)'
+SERVICE_KEY='PATH TO ADMIN SDK KEY Example: C:\firestore.json (without quotes)'
 FULL_HOST=http://localhost:8080
 PORT=8080
 FRONTEND_CALLBACK_URL=http://localhost/callback.html
