--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 DISCORD_ID='APP ID'
 DISCORD_SECRET='APP SECRET'
-SERVICE_KEY='PATH TO ADMIN SDK KEY Example: C:\firestore.json (without quotes)'
-FULL_HOST=http://localhost:8080
+ADMIN_SDK='PATH TO ADMIN SDK KEY. Example: C:\firestore.json (without quotes)'
 PORT=8080
-FRONTEND_CALLBACK_URL=http://localhost/callback.html
+REDIRECT_URI=https://knight.chesscord.wiki/
